docs: README 变成门面（593 → 269 行），手册各归其位
长的不是「它是什么」那一半，而是手册那一半：用法（`--help` 的逐字副本）、配置与环境变量、工具表、工作区、
架构、开发与测试数表——约 180 行纯参考资料，另有约 150 行与 `docs/` 里已有的文档**说同一件事**，而「同一件
事有两个地方说」正是这个仓库自己的约定禁止的。

新家：**`docs/USAGE.md`**（用法、配置、工具、工作区、自带运行时的包）、`docs/WEBUI.md`（手机与 Tailscale
那一节并进已有的「从别的设备访问」）、`docs/ROUTER.md`（提供方、端点与密钥）、`docs/ARCHITECTURE.md`
（目录职责那张表）、`CONTRIBUTING.md`（怎么跑测试与按包的测试数）。README 留下门面：它是什么、为什么选它、
两分钟跑起来、它刻意不做什么、限制，末尾一张指向 `docs/` 的清单。文字原样搬家，只调标题层级与指针；
`DocsConsistencyTest` 跟着搬到新家，它守的那条主张一字未改（用法表与工具表必须逐字等于代码）。

搬的过程里逐条核对「每个事实只剩一处」，抓到两处**真的与代码矛盾**的旧声明：`docs/WEBUI.md` 写着「只有
两种协议存在」（代码里是四种）；`docs/ROUTER.md` 还写着「GeminiProvider 没有接到 Providers 上，今天没有
任何 kind 能选中它」——那在写它的时候是真的，而**给 Gemini 接线的那次改动没有回头改它**。两处都按代码改。

fix: 真浏览器那条测试跑在自己的 JVM 里

它在整套里犯过两次病（一次转录空着、一次 `Runtime.evaluate` 永远不回答），而单跑 15 次全过、两次失败都只
发生在七十几个类跑完之后。它是唯一**驱动另一个进程**的测试，所以让它不再与前面那些类共享运行时是最直接的
办法：surefire 里多一个 `browser-smoke` execution，默认那一遍把它排除、它自己那一遍只跑它。不需要把整棵
套件降级成「每个类一个 JVM」（那样 CI 会慢一倍）。隔离之后连跑两遍全量都过，它自己仍是 1 秒。

代价写在 pom 的注释里：`-Dtest=` 会覆盖 include，所以用 `-Dtest=WebBrowserSmokeTest` 时它会被跑两遍——
一秒的重复比一个只在特定调用方式下才生效的隔离便宜。

Verified: 743 tests, 0 failures（含隔离前连跑两遍的对照：改前 4 次里 2 次失败，改后 2 次全过）。