@@ -140,21 +140,7 @@ Windows 上是仓库根下同一个文件的 `ccj.cmd`：把它所在的目录�
 `target\ccj.jar` 在不在，不看源码新旧，因为 `find -newer` 在 CMD 里没有对应物（要它重建，先删掉那个 jar）。
 见 [docs/BOOTSTRAP.md](docs/BOOTSTRAP.md)。
 
-### 想要一个自带运行时的包？
-
-默认不发安装包，就是那个 2.9 MB 的 jar：任何 JDK 21+ 都能跑，不需要构建工具，拷到哪台机器都行。如果要的
-是「连运行时一起带走」的东西，`jpackage`（JDK 自带）一行就够：
-
-```bash
-jpackage --type app-image --name ccj --input target --main-jar ccj.jar \
-  --main-class com.ccj.agent.cli.Main --dest dist \
-  --add-modules java.net.http,jdk.httpserver,java.desktop
-```
-
-在一台 Linux 上实测：产物 98 MB（里面是一份 `jlink` 出来的运行时），`dist/ccj/bin/ccj --version` 与一个
-真实的 `--demo` 回合都跑得通。**没有**做成 `deb`/`rpm`/`msi`/`dmg` 那样的安装包，因为那需要目标平台自己的
-工具链（`dpkg-deb`、`rpmbuild`、WiX、Xcode），而 `jpackage` **不能跨平台构建**——为三个平台出包要在三台
-机器上各跑一次，这个项目没有那三台机器。
+想要连运行时一起带走的安装包，见 [docs/USAGE.md](docs/USAGE.md) 末尾那一节。
 
 ### 不用 API 密钥也能试
 
@@ -176,89 +162,19 @@ ccj --demo -p "read pom.xml"      # one-shot
 *上面这一张是 `./ccj --demo` 里真的跑了一个回合之后截的：`read pom.xml` 是一次真实工具调用，右边的用量
 面板是真的账本。*
 
-```bash
-ccj                       # the default: serve on 127.0.0.1 and on this machine's tailnet address,
-                          # then open it
-ccj --no-open             # for scripts: serve it without launching a browser
-ccj --repl                # the terminal front end instead
-```
-
 这个页面流式显示助手的散文，把每次工具调用显示成带参数、耗时和输出的卡片，并把审批请求渲染成阻塞卡片，
 上面是五个回答——拒绝 / 只允许这一次 / 本会话都允许 / 始终允许 / 以后都拒绝——因为它本来就是：循环线程
 一直停着，直到有人回答，超时即拒绝。回答以 markdown 到达，并在流式传输的同时按 markdown 渲染（标题、
 列表、表格、围栏代码、链接）。会话就是 CLI 用的那批 JSONL 文件，所以在终端里开始的对话能在浏览器里
 继续，反过来也一样。
-
-**一条命令，两个入口。** 服务绑定的是具名地址，而不是通配地址：
-
-```
-$ ccj
-oh-my-ccj 0.1.0 — web UI: http://127.0.0.1:6767/
-                          also on http://100.64.0.1:6767/?token=…
-  the first address is this machine (no token needed there); the others are the tailnet, and ask for
-  the token in the URL
-```
-
-- **本机**用 `127.0.0.1` 直接够到它，什么都不用带。loopback 不是网络，为了用你自己的命令行还要输一个
-  秘密，那是没人要的密码。
-- **你的其它设备**通过 tailnet 地址够到它，必须带上 token。token 首次使用时生成，保存在
-  `~/.oh-my-ccj/web-token`（0600），这样重启不会把手机踢下线，并打印在 URL 里——打开那个 URL 一次，
-  token 就落进 HttpOnly cookie。
-- **其它任何东西**都够不到它：不绑通配地址，所以咖啡店 wifi、办公室 LAN 和 docker bridge 都没有监听者
-  可以对话。`--host <addr>` 改为只绑一个地址，`--host tailscale` 只绑 tailnet 地址；此时除 loopback
-  外的任何地址都需要 token——来自 `--web-token`、`CCJ_WEB_TOKEN` 或那个文件。
-- 无 token 的服务器（没有 tailnet 的机器）还会坚持要求 `Host` 头是 loopback：你打开的任意页面都能不经
-  预检直接 POST 到 `127.0.0.1`，而 DNS rebinding 能让它读到回答，所以指名其它 host 的请求会被拒绝，
-  而不是被服务。
-
-`--port` 改端口。代理能跑 shell 命令，所以它能被够到的地址是个安全决策，不是便利决策：从网络访问它的
-代价就是一个 token。
-
-模型设置——提供方、模型、base URL、API key 和 temperature——就在 UI 里（**设置**面板），**测试连接**会在
-保存前发一个很小的请求来检查它们。effort 档位则在消息框上方选择。**回答用哪种语言不是一个设置**：模型自己决定，而想把它钉死的人
-可以写进 `CCJ.md` 或 `--system`——那是关于这项工作的具体陈述，不是一个全局开关。上下文预算刻意不放进表单：它是
-`--max-context-tokens`、`CCJ_MAX_CONTEXT_TOKENS` 或配置文件里的 `"maxContextTokens"`。密钥从不回传给
-浏览器，只传是否存在以及它来自哪里。见 [docs/WEBUI.md](docs/WEBUI.md)。
+见 [docs/WEBUI.md](docs/WEBUI.md)。
 
 ### 用手机通过 Tailscale 访问
 
-不用多输任何东西：如果这台机器在某个 tailnet 里，`ccj` 已经在为你的手机服务了。
-
-```bash
-ccj                    # this machine at http://127.0.0.1:6767/
-                       # and the phone at http://100.64.0.1:6767/?token=…
-```
-
-在手机上打开第二个 URL 一次；token 进入 HttpOnly cookie，之后的书签就什么都不用带了。token 首次使用时
-生成并保存在 `~/.oh-my-ccj/web-token`（0600，只有你能读），这样重启不会把手机踢下线；`--web-token` 和
-`CCJ_WEB_TOKEN` 可以覆盖它（自己设的短于 16 个字符会被警告一次），两处任意一处留空都算「没有 token」，
-而不是空密码。它是 32 个字节的 `SecureRandom`——256 位，写成 64 个十六进制字符，而且一次安装只有一个：
-两个进程同时启动时，输的那一方用赢家写下的那个。
-
-Tailscale 只是**最省事**的那条路，不是必需的那条：局域网、SSH 端口转发、别的 mesh VPN、隧道和
-反向代理各自怎么配、各自要注意什么，见 [docs/WEBUI.md](docs/WEBUI.md) 的「从别的设备访问」。
-
-有两件事让它成为*你的*，而不只是「在某个网络上」：
-
-- **绑定的是地址，不是每个接口。** `ss -ltn | grep 6767` 会显示两个监听：`127.0.0.1:6767` 和
-  `100.64.0.1:6767`。手机用的是 tailnet 那个，它也是唯一能从本机之外够到的。`--host tailscale`
-  只服务 tailnet 地址（那样本机也得用它，或者用 MagicDNS 名字 `<机器名>.<你的 tailnet>.ts.net`）。
-- **一个 tailnet 不等于一台设备。** 其中的每台设备都能连上那个端口；挡住其它设备的是 token。如果还想
-  把它钉死到一台设备，就在 tailnet 的访问规则里加上：
-
-  ```json
-  { "acls": [ { "action": "accept", "src": ["friends-phone"], "dst": ["this-machine:6767"] },
-              { "action": "accept", "src": ["this-machine"], "dst": ["this-machine:6767"] } ] }
-  ```
-
-  （Tailscale 的默认规则本来就允许 tailnet 内的一切——上面这一对才是把它*收窄*的东西。
-  `tailscale status` 会打印设备名。）
-
-这串 tailnet 地址是通过 `tailscale0` 接口解析出来的；在那些用别的接口承载 tailnet 的系统上，则通过
-`tailscale ip -4` 询问得到。`100.64.0.0/10` 之外的地址永远不被接受，没有 tailnet 的机器就只服务
-loopback，不绑任何别的东西。`--host <addr>` 仍然接受任意地址，而任何非 loopback 地址都**需要** token。
-想要带真证书、完全不开端口的 HTTPS，在一个 loopback 绑定前面加 `tailscale serve --bg 6767` 也行——它
-仍然需要 token，因为那时服务器看到的 `Host` 是主机名，而不是 loopback。
+如果这台机器在某个 tailnet 里，`ccj` 已经在为你的手机服务了：打开打印出来的第二个 URL 一次，token 就落进
+HttpOnly cookie，之后的书签就什么都不用带。Tailscale 只是**最省事**的那条路，不是必需的那条：局域网、SSH
+端口转发、别的 mesh VPN、隧道和反向代理各自怎么配、各自要注意什么，见
+[docs/WEBUI.md](docs/WEBUI.md) 的「从别的设备访问」。
 
 ## 它能做什么
 
@@ -296,270 +212,12 @@ loopback，不绑任何别的东西。`--host <addr>` 仍然接受任意地址�
 | 同时进行多个对话 | 一个会话里运行的回合不会锁住服务器：第一个还在干活时可以在另一个对话里开始第二个任务，侧栏会标出正在运行的会话（■ 可以从任何地方停掉一个，不用打开它）。每个会话仍然只能*一次一个*回合——两个写者写同一份转录就是它损坏的方式——而改变每个对话所依赖之物的操作（模型、配置文件、工作区）会等到没有东西在跑。消息的载荷带有它们的会话 id，所以来自后台回合的 delta 绝不可能被渲染进你正在读的转录里。 |
 | 自举 | 代理可以重新构建这个项目并安装结果：`mvn -q -DskipTests -Djar.name=ccj-next package` 写出一个临时 jar，不碰正在使用的那个（截断一个 JVM 正在执行的 jar，就是进程在构建中途死掉的方式），然后 `restart` 把它改名到位，启动器运行新代码——**落回你原来那个对话**：结束的进程把那个会话 id 记下来，下一个进程打开它，所以重启不再给你一份空转录。见 [docs/BOOTSTRAP.md](docs/BOOTSTRAP.md)。 |
 
-## 用法
-
-```
-    用法: ccj [options]
-
-模式:
-      (无 flag)                启动 web UI，并在浏览器中打开它
-          --repl               在本终端里开启交互式 REPL
-          --web                默认值，只是显式写出来（供脚本使用）
-          --no-open            启动 web UI 但不打开浏览器
-      -p, --print <prompt>     运行单个回合，打印答案后退出
-
-演示:
-      --demo                   不需要模型也不需要密钥：read/run/list/search 变成真实的工具
-                               调用，因此可以把主循环、工具和审批提示都试一遍
-
-模型:
-          --provider <name>    要使用的提供方（openai、anthropic……）
-          --model <name>       模型标识符
-          --base-url <url>     覆盖提供方的 base URL
-          --api-key <key>      API 密钥字面值
-          --api-key-env <var>  保存 API 密钥的环境变量
-          --temperature <n>    采样温度
-          --max-tokens <n>     响应 token 上限
-          --max-context-tokens <n>
-                               提示词预算：超过它，旧的工具结果会被省略，更早的往来会在请求
-                               发出之前被丢弃
-          --max-total-tokens <n>
-                               花费上限：这条会话累计用掉的 token（输入加输出）超过它，就不再
-                               开始新的回合；不设置表示不设上限
-          --reasoning <level>  模型该思考多少：low、high 或 max
-          --system <text>      本次运行的系统提示词
-
-子代理（用 --subagents 打开委派之后）:
-          --subagent-model <角色>=<模型>
-                               让一个角色用它自己的模型：explore 可以用便宜的那个，build 用强的那个
-                               （角色是 explore、verify、build；可以重复给出）
-          --subagent-reasoning <角色>=<档位>
-                               让一个角色用它自己的思考档位：low、high 或 max（可以重复给出）
-
-视觉（图片先由这个模型描述，然后才进入对话）:
-          --vision-base-url <url>    视觉模型的端点
-          --vision-model <name>      该端点上的模型标识符
-          --vision-api-key <key>     它的 API 密钥字面值
-          --vision-api-key-env <var> 保存那把密钥的环境变量
-          --vision-max-tokens <n>    一次描述可以占用的空间（默认 8192）。推理模型会先把它
-                               花完才开始写任何东西，所以给得太少会返回空答案，而不是短答案
-                               以上都不设置时，图片描述功能关闭。不会复用主提供方：看截图
-                               和写代码是不同的取舍，而私密照片用本地模型才合适。把这些设置
-                               写进 config.json 的 "vision" 块即可保留。
-
-会话:
-          --resume <id>        按 id 重新打开一个会话
-          --continue           重新打开最近的一个会话
-          --list-sessions      打印会话后退出
-          --workspace <name>   使用某个工作区：它的目录，以及它自己的会话
-
-Web:
-          --port <n>           web UI 端口（默认 6767）
-          --host <addr>        在何处提供服务（默认：127.0.0.1，且当本机位于 tailnet 上时，
-                               连它的 tailnet 地址一起监听；'tailscale' 表示只监听 tailnet
-                               地址；除 loopback 之外的任何地址都需要 token）
-          --web-token <token>  要求每个 web 请求都带上这个 token
-                               （也可以设置 CCJ_WEB_TOKEN；flag 优先）
-          --subagents          允许代理委派给子代理（会额外消耗 token）
-          --wallpapers <dir>   页面轮换作为背景的图片
-                               （默认：~/Pictures/ccj-backgrounds，或 CCJ_WALLPAPERS）
-
-    运行:
-          --config <file>      配置文件（默认：<home>/config.json）
-          --home <dir>         应用主目录（默认：~/.oh-my-ccj）
-      -C, --cwd <dir>          工具解析相对路径时依据的工作目录
-          --shell <file>       跑命令与编辑后检查的那个程序（默认：/bin/bash）
-          --tools              打印可用的工具后退出
-          --yolo               批准每一个工具调用，别名 --auto-approve
-      -h, --help               打印这份帮助
-      -v, --version            打印版本号
-
-    web UI 是默认前端；--repl 提供终端前端。在 REPL 里输入 /help 查看命令。模型设置位于
-    web UI 中，可以在运行时于那里更改。
-```
-
-REPL 命令：`/help`、`/exit`、`/clear`、`/new`、`/resume <id>`、`/sessions`、`/model <name>`、
-`/compact`、`/undo`、`/tools`、`/config`、`/yolo`。
-
-### 配置
-
-优先级从低到高：内置默认值 → `~/.oh-my-ccj/config.json` → `CCJ_*` 环境变量 → 命令行 flag。
-
-```json
-{
-  "provider": "openai",
-  "model": "gpt-4o-mini",
-  "baseUrl": "https://api.openai.com/v1",
-  "apiKeyEnv": "OPENAI_API_KEY",
-  "temperature": 0.2,
-  "maxTokens": 4096,
-  "autoApprove": false,
-  "outputLimitBytes": 32768,
-  "systemPrompt": "optional override"
-}
-```
-
-| 环境变量 | 含义 |
-|---|---|
-| `CCJ_PROVIDER`, `CCJ_MODEL`, `CCJ_BASE_URL`, `CCJ_API_KEY`, `CCJ_API_KEY_ENV` | 模型选择与凭据 |
-| `CCJ_TEMPERATURE`, `CCJ_MAX_TOKENS`, `CCJ_OUTPUT_LIMIT_BYTES` | 采样与输出上限 |
-| `CCJ_REASONING`, `CCJ_MAX_CONTEXT_TOKENS`, `CCJ_MAX_TOTAL_TOKENS` | 推理强度、提示词预算、花费上限 |
-| `CCJ_AUTO_APPROVE`, `CCJ_SYSTEM_PROMPT` | 审批模式与提示词覆盖 |
-| `CCJ_VISION_BASE_URL`, `CCJ_VISION_MODEL`, `CCJ_VISION_API_KEY`, `CCJ_VISION_API_KEY_ENV`, `CCJ_VISION_MAX_TOKENS` | 描述图片的那个模型（它自己的端点、密钥和补全预算；未设置表示该功能关闭——预算除外，它有默认值） |
-| `CCJ_WALLPAPERS` | 页面轮换作为背景的图片 |
-| `CCJ_WEB_TOKEN` | 网络地址必须携带的 token（不传 `--web-token` 时；`--web-token` 优先，否则用 `~/.oh-my-ccj/web-token`） |
-| `CCJ_HOME` | 应用主目录 |
-
-对 `openai` 和 `anthropic`，`model` 可以省略：默认分别是 `gpt-4o-mini` 和 `claude-sonnet-4-5`。当
-`baseUrl` 指向你自己的端点时，它们被刻意**不**应用——中继和本地服务器怎么命名模型都行，在那里猜会把一个
-清楚的配置错误换成一个晦涩的 404。这种情况下 `--model` / `CCJ_MODEL` 是必需的，错误信息也这么说。
-
-密钥来自配置文件里的 `apiKey`，或 `apiKeyEnv` 指定的环境变量（OpenAI 兼容默认 `OPENAI_API_KEY`，
-Anthropic 默认 `ANTHROPIC_API_KEY`）；把它留在环境里就意味着它不会落到文件里。密钥从不打印——`/config`
-和错误输出最多显示 `***1234`。
-
-### 工具
-
-| 工具 | 参数 | 说明 |
-|---|---|---|
-| `read` | `path`, `offset?`, `limit?` | 行带编号，可用 `offset` 续读，拒绝二进制文件 |
-| `write` | `path`, `content` | 创建父目录，报告字节数；审批时显示覆盖预览 |
-| `edit` | `path`, `old_string?`, `new_string?`, `replace_all?`, `edits?` | 要么给 `old_string` 与 `new_string`，要么给 `edits`——schema 因此没有把其中一个标成必填。精确匹配；有歧义就报错并给出匹配数，失败的 hunk 会带着该文件中预期位置附近的行一起返回。`edits: [{old_string, new_string, replace_all?}]` 会**一起**改动同一个文件里的多处：一次审批、一次写入，而且除非每个 hunk 都匹配，否则什么都不写（与另一块重叠的 hunk，或匹配不上的 hunk，都会拒绝整个改动）。审批显示的是整份文件的一份差异 |
-| `bash` | `command`, `cwd?`, `timeout_seconds?` | 用配置里的那个 shell 跑（默认 `/bin/bash -lc`；`cmd.exe` 收到 `/c`），stderr 合并，报告退出码，输出用 head+tail 封顶 |
-| `glob` | `pattern`, `path?` | 相对路径的 glob，含 `**`，最新的在前，跳过 `target/`、`.git/`、`node_modules/`、`.idea/` |
-| `grep` | `pattern`, `path?`, `glob?`, `ignore_case?`, `max_results?` | Java 正则，跳过二进制文件和超过 2 MiB 的文件 |
-| `fetch` | `url`, `max_bytes?`, `as?` | 第一个离开本机的工具：只允许 `http`/`https`（其它 scheme 在被拨号之前就按名字拒绝），只允许文本内容类型，读取的正文默认封顶 200 KB、最多 1 MiB，重定向手工跟随，所以每一跳都做 scheme 检查。它像其它工具一样请求审批，URL 就是规则匹配的对象——`{"tool": "fetch", "command": "https://docs.example.com/*"}`。可选参数 `as` **只接受 `"text"`**：指定时把响应体的 HTML 剥成文本（去标签与注释、去 `script`/`style` 的内容、块级标签换行、连续空白压成一个、解开常见实体），并在结果开头先说明它剥过标记、而且这是一次**由调用方要求的猜测**；别的取值当场拒绝，不传则按原样返回、行为一字不变。它不是浏览器：没有 JavaScript、没有 cookie、没有认证、没有 POST |
-| `restart` | `built` | 把一份临时构建安装到正在使用的 jar 上并在它上面重启；结束本次运行。见 [docs/BOOTSTRAP.md](docs/BOOTSTRAP.md) |
-
-工具失败绝不会杀死会话：错误的参数、未知的工具名、缺失的文件和抛出的异常都会作为错误结果回来，模型能读到
-并改正。`restart` 是唯一会故意结束本次运行的工具——而且只在它成功时才这样。
-
-### 安全模型
+## 安全模型
 
 - `read`、`glob` 和 `grep` 自由运行；`write`、`edit` 和 `bash` 需要审批。
 - 有终端时，审批会问五个回答——`y` 只允许这一次、`s` 本会话都允许、`a` 始终允许、`d` 以后都拒绝（写一条拒绝规则）、其它一律算拒绝——并显示工具、完整命令、解析后的工作目录和超时；等待期间暂停 spinner。
 - 没有终端时（管道、CI），有副作用的调用会被**拒绝**并给出解释，除非传了 `--yolo`。失败时收紧才是重点。
 - 相对路径按 `--cwd` 解析；它之外的路径会在审批提示里被标出。
-
-## 自定义提供方
-
-内置名字是编译进去的；其余的都是你的：
-
-```bash
-curl -X POST localhost:6767/api/providers -H 'content-type: application/json' -d '{
-  "name": "myrelay", "kind": "openai",
-  "baseUrl": "https://relay.example.com/v1",
-  "apiKeyEnv": "MY_KEY", "models": ["deepseek-v4-flash"]}'
-ccj --provider myrelay --model deepseek-v4-flash
-```
-
-`kind` 是**线上协议**，共四种：讲 `/chat/completions` 的都算 `openai`（默认），messages API 是
-`anthropic`，OpenAI 的 Responses API 是 `openai-responses`，Google 的
-`:streamGenerateContent` 是 `gemini`。名字由你起，协议是另一件事——`{"name":"my-gemini","kind":"gemini"}`
-与 `{"name":"gemini","kind":"gemini"}` 说的是同一个实现类。四种协议也都可以直接用它们自己的名字作为
-`--provider`（`openai-responses`、`gemini`）。
-
-定义存放在 `~/.oh-my-ccj/providers.json`，存储前会先校验，并可以在设置面板里管理。UI 读的目录来自
-`ModelCatalog` 接口，而不是直接来自配置，所以一个清楚自己模型列表的网关可以自己作答——见
-[docs/ROUTER.md](docs/ROUTER.md)。`gemini` 没有默认模型：型号名换得太快，猜一个就是把一次配置错误变成一次
-莫名其妙的 404。
-
-## 工作区
-
-一个工作区就是一个目录加上属于它的会话，因为对话只有和它所谈的文件放在一起才有意义：
-
-```bash
-ccj --workspace api            # this run works in api's directory, with api's sessions
-```
-
-当前工作区就是工具运行的地方，无论 `ccj` 是从哪个目录启动的——启动目录只在注册表为空时用来挑一个工作区，
-从不用来移动工作目录。`-C <dir>` 是唯一的例外，一个单次运行的覆盖，使用它的会话会说出来，而不是让工作区
-树暗示另一种情况。
-
-在浏览器里工作区切换器做同样的事，从那里添加只要点一下：**添加工作区**打开桌面自己的文件夹选择器，回来的
-文件夹就成为工作区——名字取自文件夹，重名时加数字后缀，已经在列表里的目录会被拒绝，而不是给它第二份历史。
-目录不存在时就创建。注册表是 `~/.oh-my-ccj/workspaces.json`；你第一次启动 `ccj` 时所在的工作区仍然映射
-到顶层的 `~/.oh-my-ccj/sessions`，所以在工作区出现之前的会话还在那里。模型设置刻意**不**按工作区区分
-——密钥和模型属于账号，不属于文件夹。忘记一个工作区永远不会删除对话文件。
-
-## 提供方、端点和密钥
-
-`baseUrl`、`apiKey` 和 `apiKeyEnv` 描述的是一个*提供方*，而不是会话，所以 `config.json` 为每个提供方保留
-一对：顶层是生效中的那些字段（用 `settingsFor` 标出），另外为每一个你输入过的其它提供方保留一个
-`remembered` 条目。
-
-```json
-{
-  "provider": "CommandCode",
-  "model": "deepseek/deepseek-v4.1-flash",
-  "apiKey": "…",
-  "settingsFor": "CommandCode",
-  "remembered": { "deepseek": { "apiKey": "…", "baseUrl": "https://api.deepseek.com" } }
-}
-```
-
-切换提供方会把要离开的那一对移进 `remembered`，再把新提供方的那一对取出来，所以两个方向的切换都是免费的，
-密钥也绝不搬家：它只被发送给当初为它输入的那个提供方，配那个提供方的端点。没有记住配对的提供方由它自己的
-定义（`providers.json`）或内置默认值提供。选中某个提供方时清空密钥字段，就是忘掉那个提供方的密钥；其它
-提供方的都不受影响。设置表单按提供方显示「已保存」（`rememberedProviders` 只带名字，从不带密钥），因为
-一个承诺了却不会发送的密钥，正是错误端点被再次写下来的方式。文件只记录你选了什么——默认得到的端点或密钥
-变量名会被省略，在加载时重新推导。
-
-## 架构
-
-```
-cli/       argument parsing, wiring, REPL, exit codes   (the only place that calls System.exit)
-ui/        AgentListener implementation: streaming text, tool cards, spinner, ANSI
-web/       the same loop behind HTTP: agent hub, SSE stream, approval handshake, single page
-workspace/ the workspace registry: named directories and where their sessions live
-demo/      a tool-routing stand-in for a model, so the CLI can be demonstrated with no key
-session/   JSONL message codec, FileSession, SessionStore
-tool/      read write edit bash glob grep + approval-aware helpers
-provider/  OpenAI-compatible and Anthropic providers over java.net.http, plus the SSE reader
-core/      Message, Provider, Tool, ToolRegistry, AgentLoop, Session, Config, AppPaths
-```
-
-`core` 是契约；其它一切都插到它上面。循环只看见一个 `Provider` 和一个 `ToolRegistry`，对 HTTP 或终端
-一无所知，所以同一个循环能在测试里无头运行、在脚本化的提供方之后运行、或对着一个 mock HTTP 服务器运行。
-消息模型、循环算法、线上映射和设计背后的推理见 [docs/ARCHITECTURE.md](docs/ARCHITECTURE.md)。
-
-## 开发
-
-```bash
-./mvnw test                               # the whole suite: no network, no API key
-mvn -Dtest=CliEndToEndTest test           # end-to-end through the CLI only
-mvn -Dtest='Web*Test' test                # HTTP + SSE + approval handshake only
-mvn -DskipTests package                   # fat jar
-```
-
-所有测试都是离线的。提供方测试和端到端测试会起一个脚本化的 HTTP 服务器（`com.sun.net.httpserver`），它用
-分块传输编码和刻意打散的帧讲两种线上格式，所以 SSE 拼装是在真实中继会产生的那种边界上被测试的。端到端测试
-驱动真正的 CLI：请求经 HTTP 发出、SSE 被解析、工具被执行、文件落到磁盘、会话被写入。
-
-| 包 | 类 | 测试数 | 覆盖 |
-|---|---|---|---|
-| `core` | 15 | 179 | 循环、工具调用与只读重叠、中止、上下文预算与 token 估算、压缩与恢复、审批规则与它们的拒绝、子代理与它的账本、配置的合并与遮蔽、提示词（项目自己的 `CCJ.md` 领起） |
-| `web` | 24 | 192 | 按主题分成九个类、共用一个夹具：页面与 SSE 流、审批握手、会话并发、会话与工作区、账本与压缩、设置表单、提供方目录、图片与视觉、跨源与 token 与 `Host`。另有九个在 node 下跑的页面用例（其中一个是真浏览器）。这里曾经是一个 3942 行的 `WebApiTest` |
-| `tool` | 11 | 106 | 匹配与截断、超时与取消、拒绝路径、`edit` 的多块与失败邻域、`fetch` 的 scheme 与体积、`restart` 及它的拒绝、**可配置的 shell 与它的参数形状** |
-| `provider` | 9 | 112 | SSE 解析、**四种线上映射**（chat-completions、messages、Responses、Gemini）、重试、自定义提供方、effort 档位、视觉客户端、模型目录 |
-| `session` | 6 | 76 | 编解码往返（含 thinking）、追加与重开、列表缓存、世代文件、附件与检查点 |
-| `e2e` | 1 | 29 | CLI → HTTP → 工具 → 磁盘：推理、预算、工具在哪个目录运行、`CCJ.md` 到达请求、重启落在同一个对话 |
-| `cli` | 2 | 18 | 参数解析、模式选择、端口建议 |
-| `workspace` | 1 | 11 | 注册表规则、持久化、隔离、给选中的文件夹命名 |
-| `mcp` | 1 | 10 | stdio 握手、工具注册、审批、关闭 |
-| `demo` | 1 | 8 | 没有模型时的工具路由、工具调用、错误路径 |
-| `docs` | 1 | 2 | README 的用法一段逐字等于 `--help`；工具表的名字、顺序与参数与每个工具的 schema 一致 |
-
-合计 **743 个测试，72 个类**。这张表按包从 surefire 报告里数出来，而不是手写的清单——手写过的那一版
-漂到了实际数字的一半左右。用法表与工具表现在由 `docs` 包里的那个测试守着（3.3 用的是「机器比对」而不是
-「生成」）。
-
-上面的数字来自维护者环境里的最后一次运行；同一套测试在 CI 的 Linux 与 macOS 上跑的是
-`./mvnw -B -ntp verify`——见 [.github/workflows/build.yml](.github/workflows/build.yml)。它第一次真的
-跑起来时两个平台都红了，四条失败全是真问题（都被本机漏掉了），修完再推才是全绿；那四条在
-[CHANGELOG](docs/CHANGELOG.md) 里。工作要往哪去，见
-[docs/ROADMAP.md](docs/ROADMAP.md)；这里的代码、测试和文档是怎么写的，见
-[docs/CONVENTIONS.md](docs/CONVENTIONS.md)。
 
 ## 限制
 
@@ -591,3 +249,20 @@ mvn -DskipTests package                   # fat jar
   所以被写下去的正是你审批过的那份差异。
 - `abort` 在步骤之间、每次工具调用之前停止一个回合，所以一个卡在模型自己的网络调用上的回合会先把那次调用
   跑完再停。等待审批的回合会立即停止，并且停在它所属的那个对话里。
+
+## 更多
+
+- **[docs/USAGE.md](docs/USAGE.md)** — 用法：命令行 flag、REPL 命令、配置文件与环境变量、每个工具的 schema、工作区，以及连运行时一起带走的安装包。
+- **[docs/WEBUI.md](docs/WEBUI.md)** — 页面的每一部分，以及从别的设备（tailnet、局域网、SSH 端口转发、隧道、反向代理）够到它时的门禁与代价。
+- **[docs/ROUTER.md](docs/ROUTER.md)** — 自定义提供方，`ModelCatalog` 这条接缝，以及提供方、端点和密钥在配置文件里怎么存。
+- **[docs/ARCHITECTURE.md](docs/ARCHITECTURE.md)** — 分层、目录职责、消息模型、循环算法与线上映射。
+- **[docs/BOOTSTRAP.md](docs/BOOTSTRAP.md)** — 启动器与 `ccj.cmd`，以及代理重新构建自己、并落回同一个对话。
+- **[docs/MCP.md](docs/MCP.md)** — MCP 服务器的配置、命名与审批。
+- **[docs/SUBAGENTS.md](docs/SUBAGENTS.md)** — 子代理的三种角色、它在哪里写文件，以及故意没有的东西。
+- **[docs/COMPACT.md](docs/COMPACT.md)** — `/compact` 的分代文件，以及它什么时候会被拒绝。
+- **[docs/RESUME.md](docs/RESUME.md)** — 一份面向简历的项目总结。
+- **[docs/VISION.md](docs/VISION.md)** — 愿景：图片从手机到达、由视觉模型转成文本。
+- **[docs/ROADMAP.md](docs/ROADMAP.md)** 与 **[docs/CHANGELOG.md](docs/CHANGELOG.md)** — 要往哪去，以及去过哪。
+- **[CONTRIBUTING.md](CONTRIBUTING.md)** — 怎么跑测试、按包分的测试数、写作与代码风格、不在范围内的东西。
+- **[docs/CONVENTIONS.md](docs/CONVENTIONS.md)** — 代码、测试和文档怎么写，以及每条规则由谁检查。
+- **[SECURITY.md](SECURITY.md)** — 防住了什么、审批规则、没有防住什么。
